had to do hard reset from master to correct spacing issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10767,3 +10767,8 @@ form .row:first-child .floating-label-form-group {
   background-color: #009da2;
   color: #fff;
 }
+#edit-truck {
+  color: white;
+  font-size: x-small;
+  position: relative;
+}
